<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="detailTransactionViewModel"
            type="com.lifendry.laundry.lifendry.ui.detailtransaction.DetailTransactionViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.detailtransaction.DetailTransactionActivity">

        <!--<include layout="@layout/template_toolbar"/>-->

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/default_padding_margin"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

                <TextView
                    android:id="@+id/txt_transaction_id_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id_transaction"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

                <TextView
                    android:id="@+id/txt_transaction_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    tools:text="1231231" />

                <TextView
                    android:id="@+id/txt_customer_name_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_padding_margin"
                    android:text="@string/pelanggan"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

                <TextView
                    android:id="@+id/txt_customer_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    tools:text="Muhammad Naufal Fadhillah" />

                <TextView
                    android:id="@+id/txt_menu_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_padding_margin"
                    android:text="@string/menu"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

                <TextView
                    android:id="@+id/txt_menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    tools:text="00001 - Cuci Biasa - Rp. 50000" />

                <TextView
                    android:id="@+id/txt_quantity_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_padding_margin"
                    android:text="@string/quantity"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

                <TextView
                    android:id="@+id/txt_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    tools:text="5 kg" />

                <TextView
                    android:id="@+id/txt_cost_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_padding_margin"
                    android:text="@string/cost"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

                <TextView
                    android:id="@+id/txt_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    tools:text="Rp. 50.000" />

                <TextView
                    android:id="@+id/txt_is_paid_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_padding_margin"
                    android:text="@string/paid_status"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

                <TextView
                    android:id="@+id/txt_is_paid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    tools:text="Sudah" />

                <TextView
                    android:id="@+id/txt_is_taken_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_padding_margin"
                    android:text="@string/taken_status"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

                <TextView
                    android:id="@+id/txt_is_taken"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    tools:text="Sudah" />

                <TextView
                    android:id="@+id/txt_info_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_padding_margin"
                    android:text="@string/info"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

                <TextView
                    android:id="@+id/txt_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="4"
                    android:ellipsize="end"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    tools:text="-" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_padding_margin">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_progress"
                        style="@style/ListMenuButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/progress"
                        app:layout_constraintHorizontal_chainStyle="spread"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/btn_paid"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_paid"
                        style="@style/ListMenuButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/paid"
                        app:layout_constraintHorizontal_chainStyle="spread"
                        app:layout_constraintLeft_toRightOf="@id/btn_progress"
                        app:layout_constraintRight_toLeftOf="@id/btn_take"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="5" />


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_take"
                        style="@style/ListMenuButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/take"
                        app:layout_constraintHorizontal_chainStyle="spread"
                        app:layout_constraintLeft_toRightOf="@id/btn_paid"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <include layout="@layout/template_loading" android:id="@+id/loading"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            android:visibility="@{safeUnbox(detailTransactionViewModel.isLoading()) ? View.VISIBLE : View.GONE}"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>